--- a/spring-boot-demo-activiti/src/main/resources/application.yml
+++ b/spring-boot-demo-activiti/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/spring-boot-demo
     username: root
-    password: root
+    password: admin
     hikari:
       data-source-properties:
         useSSL: false
